# SimpleBoostSelector

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
cmake/: functions.cmake  sub_lib_meta.cmake
cmake/versions/: boost_1_79_0.cmake  boost_1_80_0.cmake  boost_1_81_0.cmake
test/: CMakeLists.txt
test/asio/: CMakeLists.txt  main.cpp  networking.cpp
